--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-cayman
+# Site settings
+title: 刘宏亮    				  	#你博客的标题
+SEOTitle: 刘宏亮    	 #显示在浏览器上搜索的时候显示的标题
+header-img: img/post-bg-rwd.jpg  	#显示在首页的背景图片
+email:  liu13863642120@gmail.com	
+description: ""  			 #网站介绍
+keyword: "bbe, 刘宏亮的博客, liuhongliang, 刘宏亮, iOS, Apple, iPhone" #关键词
+url: "https://liuhongliang.github.io"          # 这个就是填写你的博客地址
+baseurl: ""      # 这个我们不用填写
